# empresas_dados_abertos

./: .env  db.sqlite3  pyproject.toml
base/: settings.py
empresas/: empresas.ipynb  models.py  phone_number.py
empresas/migrations/: 0001_initial.py
